Use only java8 APIs